fixed some spacing

--- a/react-app/src/components/CartModal/Cart.css
+++ b/react-app/src/components/CartModal/Cart.css
@@ -22,6 +22,7 @@
 
 .cartUser {
   overflow: scroll;
+  margin-right: 20px;
 }
 
 .cartImg:hover {
