--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -44,7 +44,7 @@
 #modal2 {
   position: fixed;
   top: 65px;
-  right: 0;
+  right: 5px;
   bottom: 0;
   left: 0;
   display: flex;
